# engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  GEMINI.md  README.md  diff  restore_slang.py  slangdconfig.json  vcpkg.json
.zed/: settings.json  tasks.json
app/: CMakeLists.txt  Camera3D.cpp  Camera3D.h  ExampleLayer.cpp  ExampleLayer.h  ModelLoader.cpp  ModelLoader.h  ShaderLoader.cpp  ShaderLoader.h  main.cpp  util.h
app/shaders/: DeferredGBufferPass.slang  DeferredLightingPass.slang  ForwardPass.slang  tri.slang  tri.spv  tri.wgsl
cmake/: ShaderCompiler.cmake
common/: CMakeLists.txt  Common.h  MaterialAssetFormat.h  MeshAssetFormat.h  ModelAssetFormat.h  ShaderAssetFormat.cpp  ShaderAssetFormat.h  ShaderInterop.h  TextureAssetFormat.h  core_interface.slang  entry.slang
core/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  Common.h  Event.cpp  Event.h  Layer.h  ResourcePool.h  Scene.h  ShaderAssetFormat.cpp  ShaderAssetFormat.h  Window.cpp  Window.h  wgx.h
core/asset/: StandardPBR.slang
core/event/: InputEvent.h  WindowEvent.h
core/import/: GLTFImporter.cpp  GLTFImporter.h  Importer.h  ShdrImporter.cpp  ShdrImporter.h
core/memory/: StridedSpan.cpp  StridedSpan.h
core/render/: BindGroupFactory.h  BindGroupManager.cpp  BindGroupManager.h  GpuResource.h  IRenderPass.cpp  IRenderPass.h  LayoutCache.cpp  LayoutCache.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  MaterialSystem.cpp  MaterialSystem.h  Mesh.cpp  Mesh.h  Mesh.slang  MeshManager.cpp  MeshManager.h  Model.h  PipelineManager.cpp  PipelineManager.h  RenderGraph.cpp  RenderGraph.h  SceneRenderer.cpp  SceneRenderer.h  ShaderAsset.cpp  ShaderAsset.h  ShaderInterop.h  ShaderManager.cpp  ShaderManager.h  ShaderSystem.cpp  ShaderSystem.h  Texture.h  TextureManager.cpp  TextureManager.h  VertexLayoutManager.cpp  VertexLayoutManager.h  render.cpp  render.h  (+4 more)
core/render/backend/: BindGroupFactory.h  BindGroupManager.cpp  BindGroupManager.h  LayoutCache.cpp  LayoutCache.h  PipelineManager.cpp  PipelineManager.h
core/render/graph/: IRenderPass.cpp  IRenderPass.h  RenderGraph.cpp  RenderGraph.h
core/render/pass/: DeferredGBufferPass.cpp  DeferredGBufferPass.h  DeferredLightingPass.cpp  DeferredLightingPass.h  ForwardRenderPass.cpp  ForwardRenderPass.h
core/render/resource/: GpuResource.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  ShaderAsset.cpp  ShaderAsset.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h  VertexLayoutManager.cpp  VertexLayoutManager.h
core/test/: test.cmake
core/util/: Load.cpp  Load.h
core/wgx/: compare.h  consts.h  convert.h  hash.h  types.h
shader/: CMakeLists.txt  SlangCompiler.cpp  SlangCompiler.h  main.cpp  util.cpp  util.h
shader/test/: Mesh.slang  ParameterTest.cpp  ParameterTest.h  ShaderInterop.h  SlangTest.cpp  core_interface.slang  dummy.json  dummy.slang  dummy.wgsl  entry.slang  example-effect.slang  forward_pass.slang  shader-toy-specialized.hlsl  shader-toy-specialized.wgsl  shader-toy.slang  standard_pbr_pass.slang  test.cpp  test.h
tools/: bin2header.py
